--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>OMDB API Example</title>
+    <title>Giphy API Example</title>
     <script src="scripts/vendors/jquery-3.0.0.min.js" charset="utf-8"></script>
     <script src="scripts/apiExample.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>OMDB API Example</h1>
-    <button id='searchNow'>Search OMDB</button>
+    <h1>Giphy API Example</h1>
+    <button id='searchNow'>Search</button>
     <div id='outputDiv'></div>
   </body>
 </html>
