--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Giphy API Example</title>
-    <script src="scripts/vendors/jquery-3.0.0.min.js" charset="utf-8"></script>
+    <script src="vendors/jquery-3.0.0.min.js" charset="utf-8"></script>
     <script src="scripts/apiExample.js" charset="utf-8"></script>
   </head>
   <body>
