--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Giphy API Example</h1>
+    <input type='text' placeholder="search?" id='searchIn'/>
     <button id='searchNow'>Search</button>
     <div id='outputDiv'></div>
   </body>
